--- a/Sign_Language_Detection.ipynb
+++ b/Sign_Language_Detection.ipynb
@@ -2467,9 +2467,9 @@
     "colors = [(245,117,16), (117,245,16), (16,117,245)]\n",
     "def prob_viz(res, actions, input_frame, colors):\n",
     "    output_frame = input_frame.copy()\n",
-    "    #for num, prob in enumerate(res):\n",
-    "        #cv2.rectangle(output_frame, (0,60+num*40), (int(prob*100), 90+num*40), colors[num], -1)\n",
-    "        #cv2.putText(output_frame, actions[num], (0, 85+num*40), cv2.FONT_HERSHEY_SIMPLEX, 1, (255,255,255), 2, cv2.LINE_AA)\n",
+    "    for num, prob in enumerate(res):\n",
+    "        cv2.rectangle(output_frame, (0,60+num*40), (int(prob*100), 90+num*40), colors[num], -1)\n",
+    "        cv2.putText(output_frame, actions[num], (0, 85+num*40), cv2.FONT_HERSHEY_SIMPLEX, 1, (255,255,255), 2, cv2.LINE_AA)\n",
     "    \n",
     "    \n",
     "    \n",
